# Python_Developer_AI_Response_Task

./: .gitignore  README.md  alembic.ini  pyproject.toml  runCommand.sh
.github/workflows/: test.yml
alembic/versions/: ce6183c0e33a_describe_your_changes.py
app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
app/routers/: ai_response.py  analytics.py  comment.py  post.py  user.py
tests/: test_ai_response.py  test_analytics.py  test_comment.py  test_post.py  test_user.py
